parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    EQUAL
    MINUS
    DOT
    COMMENT
    TRANSPOSE
    COLON
    FUNCTION
    ATOM

Grammar

Rule 0     S' -> program
Rule 1     program -> cvxbegin statements objective statements cvxend
Rule 2     program -> cvxbegin statements objective cvxend
Rule 3     program -> empty
Rule 4     empty -> <empty>
Rule 5     objective -> SENSE posy NL
Rule 6     objective -> SENSE posy NL SUBJECT TO NL
Rule 7     objective -> SENSE mono NL
Rule 8     objective -> SENSE mono NL SUBJECT TO NL
Rule 9     cvxbegin -> CVX_BEGIN GP SEMICOLON
Rule 10    cvxbegin -> CVX_BEGIN GP COMMA
Rule 11    cvxbegin -> CVX_BEGIN GP NL
Rule 12    cvxend -> CVX_END
Rule 13    cvxend -> CVX_END NL
Rule 14    cvxend -> CVX_END SEMICOLON
Rule 15    cvxend -> CVX_END COMMA
Rule 16    create -> VARIABLE var
Rule 17    create -> VARIABLES varlist
Rule 18    create -> DUAL VARIABLE ID
Rule 19    create -> DUAL VARIABLES idlist
Rule 20    var -> ID LPAREN dimlist RPAREN
Rule 21    var -> ID
Rule 22    var -> ID LPAREN RPAREN
Rule 23    varlist -> varlist var
Rule 24    varlist -> var
Rule 25    dimlist -> INT
Rule 26    dimlist -> ID
Rule 27    idlist -> idlist ID
Rule 28    idlist -> ID
Rule 29    statements -> statement NL
Rule 30    statements -> statement SEMICOLON
Rule 31    statements -> statement COMMA
Rule 32    statements -> statements statement NL
Rule 33    statements -> statements statement SEMICOLON
Rule 34    statements -> statements statement COMMA
Rule 35    statements -> statements statement SEMICOLON NL
Rule 36    statement -> constraint
Rule 37    statement -> create
Rule 38    statement -> chained_constraint
Rule 39    statement -> empty
Rule 40    chained_constraint -> posy LESSTHANEQUAL mono GREATERTHANEQUAL posy
Rule 41    chained_constraint -> mono GREATERTHANEQUAL posy LESSTHANEQUAL mono
Rule 42    chained_constraint -> mono LOGICALEQUAL mono GREATERTHANEQUAL posy
Rule 43    chained_constraint -> posy LESSTHANEQUAL mono LOGICALEQUAL mono
Rule 44    chained_constraint -> mono LESSTHANEQUAL posy GREATERTHANEQUAL mono
Rule 45    chained_constraint -> mono LESSTHANEQUAL mono GREATERTHANEQUAL mono
Rule 46    chained_constraint -> mono LESSTHANEQUAL mono LESSTHANEQUAL mono
Rule 47    constraint -> mono LOGICALEQUAL mono
Rule 48    constraint -> posy LESSTHANEQUAL mono
Rule 49    constraint -> mono GREATERTHANEQUAL posy
Rule 50    constraint -> mono LESSTHANEQUAL mono
Rule 51    constraint -> mono GREATERTHANEQUAL mono
Rule 52    mono -> mono TIMES mono
Rule 53    mono -> mono DIVIDE mono
Rule 54    mono -> mono POWER FLOAT
Rule 55    mono -> mono POWER INT
Rule 56    mono -> var
Rule 57    mono -> INT
Rule 58    mono -> FLOAT
Rule 59    posy -> mono PLUS mono
Rule 60    posy -> posy PLUS posy
Rule 61    posy -> posy PLUS mono
Rule 62    posy -> posy TIMES posy
Rule 63    posy -> posy TIMES mono
Rule 64    posy -> mono TIMES posy
Rule 65    posy -> posy DIVIDE mono
Rule 66    posy -> posy POWER INT
Rule 67    posy -> LPAREN posy RPAREN
Rule 68    mono -> LPAREN mono RPAREN

Terminals, with rules where they appear

ATOM                 : 
COLON                : 
COMMA                : 10 15 31 34
COMMENT              : 
CVX_BEGIN            : 9 10 11
CVX_END              : 12 13 14 15
DIVIDE               : 53 65
DOT                  : 
DUAL                 : 18 19
EQUAL                : 
FLOAT                : 54 58
FUNCTION             : 
GP                   : 9 10 11
GREATERTHANEQUAL     : 40 41 42 44 45 49 51
ID                   : 18 20 21 22 26 27 28
INT                  : 25 55 57 66
LESSTHANEQUAL        : 40 41 43 44 45 46 46 48 50
LOGICALEQUAL         : 42 43 47
LPAREN               : 20 22 67 68
MINUS                : 
NL                   : 5 6 6 7 8 8 11 13 29 32 35
PLUS                 : 59 60 61
POWER                : 54 55 66
RPAREN               : 20 22 67 68
SEMICOLON            : 9 14 30 33 35
SENSE                : 5 6 7 8
SUBJECT              : 6 8
TIMES                : 52 62 63 64
TO                   : 6 8
TRANSPOSE            : 
VARIABLE             : 16 18
VARIABLES            : 17 19
error                : 

Nonterminals, with rules where they appear

chained_constraint   : 38
constraint           : 36
create               : 37
cvxbegin             : 1 2
cvxend               : 1 2
dimlist              : 20
empty                : 3 39
idlist               : 19 27
mono                 : 7 8 40 41 41 42 42 43 43 44 44 45 45 45 46 46 46 47 47 48 49 50 50 51 51 52 52 53 53 54 55 59 59 61 63 64 65 68
objective            : 1 2
posy                 : 5 6 40 40 41 42 43 44 48 49 60 60 61 62 62 63 64 65 66 67
program              : 0
statement            : 29 30 31 32 33 34 35
statements           : 1 1 2 32 33 34 35
var                  : 16 23 24 56
varlist              : 17 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . cvxbegin statements objective statements cvxend
    (2) program -> . cvxbegin statements objective cvxend
    (3) program -> . empty
    (9) cvxbegin -> . CVX_BEGIN GP SEMICOLON
    (10) cvxbegin -> . CVX_BEGIN GP COMMA
    (11) cvxbegin -> . CVX_BEGIN GP NL
    (4) empty -> .

    CVX_BEGIN       shift and go to state 2
    $end            reduce using rule 4 (empty -> .)

    program                        shift and go to state 1
    cvxbegin                       shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (9) cvxbegin -> CVX_BEGIN . GP SEMICOLON
    (10) cvxbegin -> CVX_BEGIN . GP COMMA
    (11) cvxbegin -> CVX_BEGIN . GP NL

    GP              shift and go to state 5


state 3

    (1) program -> cvxbegin . statements objective statements cvxend
    (2) program -> cvxbegin . statements objective cvxend
    (29) statements -> . statement NL
    (30) statements -> . statement SEMICOLON
    (31) statements -> . statement COMMA
    (32) statements -> . statements statement NL
    (33) statements -> . statements statement SEMICOLON
    (34) statements -> . statements statement COMMA
    (35) statements -> . statements statement SEMICOLON NL
    (36) statement -> . constraint
    (37) statement -> . create
    (38) statement -> . chained_constraint
    (39) statement -> . empty
    (47) constraint -> . mono LOGICALEQUAL mono
    (48) constraint -> . posy LESSTHANEQUAL mono
    (49) constraint -> . mono GREATERTHANEQUAL posy
    (50) constraint -> . mono LESSTHANEQUAL mono
    (51) constraint -> . mono GREATERTHANEQUAL mono
    (16) create -> . VARIABLE var
    (17) create -> . VARIABLES varlist
    (18) create -> . DUAL VARIABLE ID
    (19) create -> . DUAL VARIABLES idlist
    (40) chained_constraint -> . posy LESSTHANEQUAL mono GREATERTHANEQUAL posy
    (41) chained_constraint -> . mono GREATERTHANEQUAL posy LESSTHANEQUAL mono
    (42) chained_constraint -> . mono LOGICALEQUAL mono GREATERTHANEQUAL posy
    (43) chained_constraint -> . posy LESSTHANEQUAL mono LOGICALEQUAL mono
    (44) chained_constraint -> . mono LESSTHANEQUAL posy GREATERTHANEQUAL mono
    (45) chained_constraint -> . mono LESSTHANEQUAL mono GREATERTHANEQUAL mono
    (46) chained_constraint -> . mono LESSTHANEQUAL mono LESSTHANEQUAL mono
    (4) empty -> .
    (52) mono -> . mono TIMES mono
    (53) mono -> . mono DIVIDE mono
    (54) mono -> . mono POWER FLOAT
    (55) mono -> . mono POWER INT
    (56) mono -> . var
    (57) mono -> . INT
    (58) mono -> . FLOAT
    (68) mono -> . LPAREN mono RPAREN
    (59) posy -> . mono PLUS mono
    (60) posy -> . posy PLUS posy
    (61) posy -> . posy PLUS mono
    (62) posy -> . posy TIMES posy
    (63) posy -> . posy TIMES mono
    (64) posy -> . mono TIMES posy
    (65) posy -> . posy DIVIDE mono
    (66) posy -> . posy POWER INT
    (67) posy -> . LPAREN posy RPAREN
    (20) var -> . ID LPAREN dimlist RPAREN
    (21) var -> . ID
    (22) var -> . ID LPAREN RPAREN

    VARIABLE        shift and go to state 15
    VARIABLES       shift and go to state 21
    DUAL            shift and go to state 7
    NL              reduce using rule 4 (empty -> .)
    SEMICOLON       reduce using rule 4 (empty -> .)
    COMMA           reduce using rule 4 (empty -> .)
    INT             shift and go to state 18
    FLOAT           shift and go to state 20
    LPAREN          shift and go to state 13
    ID              shift and go to state 16

    statements                     shift and go to state 6
    constraint                     shift and go to state 17
    mono                           shift and go to state 19
    create                         shift and go to state 8
    var                            shift and go to state 10
    statement                      shift and go to state 9
    posy                           shift and go to state 14
    chained_constraint             shift and go to state 12
    empty                          shift and go to state 11

state 4

    (3) program -> empty .

    $end            reduce using rule 3 (program -> empty .)


state 5

    (9) cvxbegin -> CVX_BEGIN GP . SEMICOLON
    (10) cvxbegin -> CVX_BEGIN GP . COMMA
    (11) cvxbegin -> CVX_BEGIN GP . NL

    SEMICOLON       shift and go to state 24
    COMMA           shift and go to state 23
    NL              shift and go to state 22


state 6

    (1) program -> cvxbegin statements . objective statements cvxend
    (2) program -> cvxbegin statements . objective cvxend
    (32) statements -> statements . statement NL
    (33) statements -> statements . statement SEMICOLON
    (34) statements -> statements . statement COMMA
    (35) statements -> statements . statement SEMICOLON NL
    (5) objective -> . SENSE posy NL
    (6) objective -> . SENSE posy NL SUBJECT TO NL
    (7) objective -> . SENSE mono NL
    (8) objective -> . SENSE mono NL SUBJECT TO NL
    (36) statement -> . constraint
    (37) statement -> . create
    (38) statement -> . chained_constraint
    (39) statement -> . empty
    (47) constraint -> . mono LOGICALEQUAL mono
    (48) constraint -> . posy LESSTHANEQUAL mono
    (49) constraint -> . mono GREATERTHANEQUAL posy
    (50) constraint -> . mono LESSTHANEQUAL mono
    (51) constraint -> . mono GREATERTHANEQUAL mono
    (16) create -> . VARIABLE var
    (17) create -> . VARIABLES varlist
    (18) create -> . DUAL VARIABLE ID
    (19) create -> . DUAL VARIABLES idlist
    (40) chained_constraint -> . posy LESSTHANEQUAL mono GREATERTHANEQUAL posy
    (41) chained_constraint -> . mono GREATERTHANEQUAL posy LESSTHANEQUAL mono
    (42) chained_constraint -> . mono LOGICALEQUAL mono GREATERTHANEQUAL posy
    (43) chained_constraint -> . posy LESSTHANEQUAL mono LOGICALEQUAL mono
    (44) chained_constraint -> . mono LESSTHANEQUAL posy GREATERTHANEQUAL mono
    (45) chained_constraint -> . mono LESSTHANEQUAL mono GREATERTHANEQUAL mono
    (46) chained_constraint -> . mono LESSTHANEQUAL mono LESSTHANEQUAL mono
    (4) empty -> .
    (52) mono -> . mono TIMES mono
    (53) mono -> . mono DIVIDE mono
    (54) mono -> . mono POWER FLOAT
    (55) mono -> . mono POWER INT
    (56) mono -> . var
    (57) mono -> . INT
    (58) mono -> . FLOAT
    (68) mono -> . LPAREN mono RPAREN
    (59) posy -> . mono PLUS mono
    (60) posy -> . posy PLUS posy
    (61) posy -> . posy PLUS mono
    (62) posy -> . posy TIMES posy
    (63) posy -> . posy TIMES mono
    (64) posy -> . mono TIMES posy
    (65) posy -> . posy DIVIDE mono
    (66) posy -> . posy POWER INT
    (67) posy -> . LPAREN posy RPAREN
    (20) var -> . ID LPAREN dimlist RPAREN
    (21) var -> . ID
    (22) var -> . ID LPAREN RPAREN

    SENSE           shift and go to state 27
    VARIABLE        shift and go to state 15
    VARIABLES       shift and go to state 21
    DUAL            shift and go to state 7
    NL              reduce using rule 4 (empty -> .)
    SEMICOLON       reduce using rule 4 (empty -> .)
    COMMA           reduce using rule 4 (empty -> .)
    INT             shift and go to state 18
    FLOAT           shift and go to state 20
    LPAREN          shift and go to state 13
    ID              shift and go to state 16

    constraint                     shift and go to state 17
    mono                           shift and go to state 19
    create                         shift and go to state 8
    var                            shift and go to state 10
    objective                      shift and go to state 26
    statement                      shift and go to state 25
    posy                           shift and go to state 14
    chained_constraint             shift and go to state 12
    empty                          shift and go to state 11

state 7

    (18) create -> DUAL . VARIABLE ID
    (19) create -> DUAL . VARIABLES idlist

    VARIABLE        shift and go to state 28
    VARIABLES       shift and go to state 29


state 8

    (37) statement -> create .

    NL              reduce using rule 37 (statement -> create .)
    SEMICOLON       reduce using rule 37 (statement -> create .)
    COMMA           reduce using rule 37 (statement -> create .)


state 9

    (29) statements -> statement . NL
    (30) statements -> statement . SEMICOLON
    (31) statements -> statement . COMMA

    NL              shift and go to state 31
    SEMICOLON       shift and go to state 32
    COMMA           shift and go to state 30


state 10

    (56) mono -> var .

    RPAREN          reduce using rule 56 (mono -> var .)
    TIMES           reduce using rule 56 (mono -> var .)
    DIVIDE          reduce using rule 56 (mono -> var .)
    POWER           reduce using rule 56 (mono -> var .)
    NL              reduce using rule 56 (mono -> var .)
    SEMICOLON       reduce using rule 56 (mono -> var .)
    COMMA           reduce using rule 56 (mono -> var .)
    LOGICALEQUAL    reduce using rule 56 (mono -> var .)
    GREATERTHANEQUAL reduce using rule 56 (mono -> var .)
    LESSTHANEQUAL   reduce using rule 56 (mono -> var .)
    PLUS            reduce using rule 56 (mono -> var .)


state 11

    (39) statement -> empty .

    NL              reduce using rule 39 (statement -> empty .)
    SEMICOLON       reduce using rule 39 (statement -> empty .)
    COMMA           reduce using rule 39 (statement -> empty .)


state 12

    (38) statement -> chained_constraint .

    NL              reduce using rule 38 (statement -> chained_constraint .)
    SEMICOLON       reduce using rule 38 (statement -> chained_constraint .)
    COMMA           reduce using rule 38 (statement -> chained_constraint .)


state 13

    (68) mono -> LPAREN . mono RPAREN
    (67) posy -> LPAREN . posy RPAREN
    (52) mono -> . mono TIMES mono
    (53) mono -> . mono DIVIDE mono
    (54) mono -> . mono POWER FLOAT
    (55) mono -> . mono POWER INT
    (56) mono -> . var
    (57) mono -> . INT
    (58) mono -> . FLOAT
    (68) mono -> . LPAREN mono RPAREN
    (59) posy -> . mono PLUS mono
    (60) posy -> . posy PLUS posy
    (61) posy -> . posy PLUS mono
    (62) posy -> . posy TIMES posy
    (63) posy -> . posy TIMES mono
    (64) posy -> . mono TIMES posy
    (65) posy -> . posy DIVIDE mono
    (66) posy -> . posy POWER INT
    (67) posy -> . LPAREN posy RPAREN
    (20) var -> . ID LPAREN dimlist RPAREN
    (21) var -> . ID
    (22) var -> . ID LPAREN RPAREN

    INT             shift and go to state 18
    FLOAT           shift and go to state 20
    LPAREN          shift and go to state 13
    ID              shift and go to state 16

    var                            shift and go to state 10
    mono                           shift and go to state 33
    posy                           shift and go to state 34

state 14

    (48) constraint -> posy . LESSTHANEQUAL mono
    (40) chained_constraint -> posy . LESSTHANEQUAL mono GREATERTHANEQUAL posy
    (43) chained_constraint -> posy . LESSTHANEQUAL mono LOGICALEQUAL mono
    (60) posy -> posy . PLUS posy
    (61) posy -> posy . PLUS mono
    (62) posy -> posy . TIMES posy
    (63) posy -> posy . TIMES mono
    (65) posy -> posy . DIVIDE mono
    (66) posy -> posy . POWER INT

    LESSTHANEQUAL   shift and go to state 37
    PLUS            shift and go to state 39
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 35
    POWER           shift and go to state 36


state 15

    (16) create -> VARIABLE . var
    (20) var -> . ID LPAREN dimlist RPAREN
    (21) var -> . ID
    (22) var -> . ID LPAREN RPAREN

    ID              shift and go to state 16

    var                            shift and go to state 40

state 16

    (20) var -> ID . LPAREN dimlist RPAREN
    (21) var -> ID .
    (22) var -> ID . LPAREN RPAREN

    LPAREN          shift and go to state 41
    TIMES           reduce using rule 21 (var -> ID .)
    DIVIDE          reduce using rule 21 (var -> ID .)
    POWER           reduce using rule 21 (var -> ID .)
    PLUS            reduce using rule 21 (var -> ID .)
    LOGICALEQUAL    reduce using rule 21 (var -> ID .)
    GREATERTHANEQUAL reduce using rule 21 (var -> ID .)
    LESSTHANEQUAL   reduce using rule 21 (var -> ID .)
    RPAREN          reduce using rule 21 (var -> ID .)
    NL              reduce using rule 21 (var -> ID .)
    SEMICOLON       reduce using rule 21 (var -> ID .)
    COMMA           reduce using rule 21 (var -> ID .)
    ID              reduce using rule 21 (var -> ID .)


state 17

    (36) statement -> constraint .

    NL              reduce using rule 36 (statement -> constraint .)
    SEMICOLON       reduce using rule 36 (statement -> constraint .)
    COMMA           reduce using rule 36 (statement -> constraint .)


state 18

    (57) mono -> INT .

    RPAREN          reduce using rule 57 (mono -> INT .)
    TIMES           reduce using rule 57 (mono -> INT .)
    DIVIDE          reduce using rule 57 (mono -> INT .)
    POWER           reduce using rule 57 (mono -> INT .)
    NL              reduce using rule 57 (mono -> INT .)
    SEMICOLON       reduce using rule 57 (mono -> INT .)
    COMMA           reduce using rule 57 (mono -> INT .)
    LOGICALEQUAL    reduce using rule 57 (mono -> INT .)
    GREATERTHANEQUAL reduce using rule 57 (mono -> INT .)
    LESSTHANEQUAL   reduce using rule 57 (mono -> INT .)
    PLUS            reduce using rule 57 (mono -> INT .)


state 19

    (47) constraint -> mono . LOGICALEQUAL mono
    (49) constraint -> mono . GREATERTHANEQUAL posy
    (50) constraint -> mono . LESSTHANEQUAL mono
    (51) constraint -> mono . GREATERTHANEQUAL mono
    (41) chained_constraint -> mono . GREATERTHANEQUAL posy LESSTHANEQUAL mono
    (42) chained_constraint -> mono . LOGICALEQUAL mono GREATERTHANEQUAL posy
    (44) chained_constraint -> mono . LESSTHANEQUAL posy GREATERTHANEQUAL mono
    (45) chained_constraint -> mono . LESSTHANEQUAL mono GREATERTHANEQUAL mono
    (46) chained_constraint -> mono . LESSTHANEQUAL mono LESSTHANEQUAL mono
    (52) mono -> mono . TIMES mono
    (53) mono -> mono . DIVIDE mono
    (54) mono -> mono . POWER FLOAT
    (55) mono -> mono . POWER INT
    (59) posy -> mono . PLUS mono
    (64) posy -> mono . TIMES posy

    LOGICALEQUAL    shift and go to state 47
    GREATERTHANEQUAL shift and go to state 45
    LESSTHANEQUAL   shift and go to state 44
    TIMES           shift and go to state 46
    DIVIDE          shift and go to state 42
    POWER           shift and go to state 43
    PLUS            shift and go to state 48


state 20

    (58) mono -> FLOAT .

    RPAREN          reduce using rule 58 (mono -> FLOAT .)
    TIMES           reduce using rule 58 (mono -> FLOAT .)
    DIVIDE          reduce using rule 58 (mono -> FLOAT .)
    POWER           reduce using rule 58 (mono -> FLOAT .)
    NL              reduce using rule 58 (mono -> FLOAT .)
    SEMICOLON       reduce using rule 58 (mono -> FLOAT .)
    COMMA           reduce using rule 58 (mono -> FLOAT .)
    LOGICALEQUAL    reduce using rule 58 (mono -> FLOAT .)
    GREATERTHANEQUAL reduce using rule 58 (mono -> FLOAT .)
    LESSTHANEQUAL   reduce using rule 58 (mono -> FLOAT .)
    PLUS            reduce using rule 58 (mono -> FLOAT .)


state 21

    (17) create -> VARIABLES . varlist
    (23) varlist -> . varlist var
    (24) varlist -> . var
    (20) var -> . ID LPAREN dimlist RPAREN
    (21) var -> . ID
    (22) var -> . ID LPAREN RPAREN

    ID              shift and go to state 16

    varlist                        shift and go to state 49
    var                            shift and go to state 50

state 22

    (11) cvxbegin -> CVX_BEGIN GP NL .

    VARIABLE        reduce using rule 11 (cvxbegin -> CVX_BEGIN GP NL .)
    VARIABLES       reduce using rule 11 (cvxbegin -> CVX_BEGIN GP NL .)
    DUAL            reduce using rule 11 (cvxbegin -> CVX_BEGIN GP NL .)
    INT             reduce using rule 11 (cvxbegin -> CVX_BEGIN GP NL .)
    FLOAT           reduce using rule 11 (cvxbegin -> CVX_BEGIN GP NL .)
    LPAREN          reduce using rule 11 (cvxbegin -> CVX_BEGIN GP NL .)
    ID              reduce using rule 11 (cvxbegin -> CVX_BEGIN GP NL .)
    NL              reduce using rule 11 (cvxbegin -> CVX_BEGIN GP NL .)
    SEMICOLON       reduce using rule 11 (cvxbegin -> CVX_BEGIN GP NL .)
    COMMA           reduce using rule 11 (cvxbegin -> CVX_BEGIN GP NL .)


state 23

    (10) cvxbegin -> CVX_BEGIN GP COMMA .

    VARIABLE        reduce using rule 10 (cvxbegin -> CVX_BEGIN GP COMMA .)
    VARIABLES       reduce using rule 10 (cvxbegin -> CVX_BEGIN GP COMMA .)
    DUAL            reduce using rule 10 (cvxbegin -> CVX_BEGIN GP COMMA .)
    INT             reduce using rule 10 (cvxbegin -> CVX_BEGIN GP COMMA .)
    FLOAT           reduce using rule 10 (cvxbegin -> CVX_BEGIN GP COMMA .)
    LPAREN          reduce using rule 10 (cvxbegin -> CVX_BEGIN GP COMMA .)
    ID              reduce using rule 10 (cvxbegin -> CVX_BEGIN GP COMMA .)
    NL              reduce using rule 10 (cvxbegin -> CVX_BEGIN GP COMMA .)
    SEMICOLON       reduce using rule 10 (cvxbegin -> CVX_BEGIN GP COMMA .)
    COMMA           reduce using rule 10 (cvxbegin -> CVX_BEGIN GP COMMA .)


state 24

    (9) cvxbegin -> CVX_BEGIN GP SEMICOLON .

    VARIABLE        reduce using rule 9 (cvxbegin -> CVX_BEGIN GP SEMICOLON .)
    VARIABLES       reduce using rule 9 (cvxbegin -> CVX_BEGIN GP SEMICOLON .)
    DUAL            reduce using rule 9 (cvxbegin -> CVX_BEGIN GP SEMICOLON .)
    INT             reduce using rule 9 (cvxbegin -> CVX_BEGIN GP SEMICOLON .)
    FLOAT           reduce using rule 9 (cvxbegin -> CVX_BEGIN GP SEMICOLON .)
    LPAREN          reduce using rule 9 (cvxbegin -> CVX_BEGIN GP SEMICOLON .)
    ID              reduce using rule 9 (cvxbegin -> CVX_BEGIN GP SEMICOLON .)
    NL              reduce using rule 9 (cvxbegin -> CVX_BEGIN GP SEMICOLON .)
    SEMICOLON       reduce using rule 9 (cvxbegin -> CVX_BEGIN GP SEMICOLON .)
    COMMA           reduce using rule 9 (cvxbegin -> CVX_BEGIN GP SEMICOLON .)


state 25

    (32) statements -> statements statement . NL
    (33) statements -> statements statement . SEMICOLON
    (34) statements -> statements statement . COMMA
    (35) statements -> statements statement . SEMICOLON NL

    NL              shift and go to state 51
    SEMICOLON       shift and go to state 53
    COMMA           shift and go to state 52


state 26
